--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="style.css">
-    <title>Live</title>
+    <title>Calendario</title>
   </head>
   <body>
     <div class="conteiner">
+
       <div class="calendario">
-        <ul>
-          
-        </ul>
+        <span class="giorno"></span>
+
 
       </div>
 
