funziona tutto manca griglia quagrati e appendere il tutto

--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
     <div class="conteiner">
 
       <div class="calendario">
-        <span class="giorno"></span>
+        <div class="header">
+          <div class="navMesi">
+            <h1></h1>
+            <i id="prev"class="fas fa-angle-left"></i>
+            <i id="next"class="fas fa-angle-right"></i>
+          </div>
+          <div class="navPaesi">
+            <select id="country" name=""></select>
+            <button id="btnPaesi">Invia</button>
+          </div>
+        </div>
+        <div class="griglia">
 
+          <ul></ul>
 
+        </div>
       </div>
-
+    </div>
+    <div class="template">
+      <li></li>
+      <option value=""></option>
     </div>
 
 
